PROJECT(SlcCalc)

SET(NAME "SlcCalc")
CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1 FATAL_ERROR)
CMAKE_POLICY(SET CMP0020 NEW)


FIND_PACKAGE(Qt5Core)
FIND_PACKAGE(Qt5Widgets)
INCLUDE_DIRECTORIES(${QT5_DIR})
SET(QT_LIBRARIES
  ${Qt5Gui_LIBRARIES}
  ${Qt5Widgets_LIBRARIES}
)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

SET(${NAME}_SOURCES
  slcCalcGui.cxx
  slcBmiCalc.cxx
  slcBmiMfCalc.cxx
  slcBmiAgeCalc.cxx
)

SET(${NAME}_HEADERS
  slcCalcGui.h
)

SET(${NAME}_HEADERS_NO_MOC
  slcBmiCalc.h
  slcBmiMfCalc.h
  slcBmiAgeCalc.h
)

SET(${NAME}_UI
  slcCalcGui.ui
)

SET(${NAME}_RES

)


QT5_WRAP_CPP(${NAME}_HEADERS_MOC ${${NAME}_HEADERS})
QT5_WRAP_UI(${NAME}_HEADERS_UI ${${NAME}_UI})
QT5_ADD_RESOURCES(${NAME}_RES_RCC ${${NAME}_RES})


ADD_EXECUTABLE(${NAME} ${WIN32_DEFINE}
  ${${NAME}_HEADERS}
  ${${NAME}_SOURCES}
  ${${NAME}_HEADERS_MOC}
  ${${NAME}_HEADERS_NO_MOC}
  ${${NAME}_HEADERS_UI}
  ${${NAME}_RES_RCC}
)

TARGET_LINK_LIBRARIES(${NAME}
  ${QT_LIBRARIES}
)

IF(BUILD_TESTING)
  INCLUDE(CTest)
  ADD_SUBDIRECTORY("testing")
ENDIF(BUILD_TESTING)

